Configure new reference page and add testimonials

--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Tue Aug 29 2023 05:50:51 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3adc91037cde" data-wf-site="638cce601f96abee0a5facb7">
+<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="63949a6eea7b3adc91037cde" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Kofo - Webflow Ecommerce website template</title>
