--- a/referenssit.html
+++ b/referenssit.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Tue Aug 29 2023 05:50:51 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7">
+<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Katso aikaisemmat projektimme - Nords Oy</title>
@@ -131,6 +131,25 @@
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-12037d6b" class="client-card">
+                <a href="referenssi/mikura-sushi-oy" class="client-image w-inline-block"><img src="images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-mikura-sushi-p-500.webp 500w, images/mockup-mikura-sushi-p-800.webp 800w, images/mockup-mikura-sushi-p-1080.webp 1080w, images/mockup-mikura-sushi-p-1600.webp 1600w, images/mockup-mikura-sushi.webp 2000w" alt="Mikura Sushi" class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="#" class="category-tag">08/2023</a>
+                  </div>
+                  <a href="referenssi/mikura-sushi-oy" class="client-title">Mikura Sushi Oy</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/mikura-sushi-oy" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-b5253acf-948e-d9ee-da38-2fd81d196fcc-12037d6b" class="client-card">
                 <a href="referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/lannentilan-leipomo-mockup-p-500.webp 500w, images/lannentilan-leipomo-mockup-p-800.webp 800w, images/lannentilan-leipomo-mockup-p-1080.webp 1080w, images/lannentilan-leipomo-mockup-p-1600.webp 1600w, images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
@@ -295,7 +314,7 @@
         <div class="footer-divider"></div>
         <div>
           <div class="footer-grid">
-            <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." class="logo-footer">
+            <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c4996-f17c497c"><img src="images/ndm-cropped.png" loading="lazy" width="70" sizes="(max-width: 479px) 100vw, 140px" alt="Kirjaimet NDM ja nimi Nords Digital Media sen vieressä." srcset="images/ndm-cropped-p-500.png 500w, images/ndm-cropped-p-800.png 800w, images/ndm-cropped-p-1080.png 1080w, images/ndm-cropped-p-1600.png 1600w, images/ndm-cropped-p-2000.png 2000w, images/ndm-cropped-p-2600.png 2600w, images/ndm-cropped-p-3200.png 3200w" class="logo-footer">
               <div class="margin-30px">
                 <p class="paragraph-footer">Nords on suomalainen brändäys ja digitoimisto sitoutunut tuottamaan vain ja ainoastaan markkinoiden huippulaatua.</p>
               </div>
