--- a/kiitos.html
+++ b/kiitos.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Tue Aug 29 2023 05:50:51 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648c1ca63aaa84b060bf0e16" data-wf-site="638cce601f96abee0a5facb7">
+<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="648c1ca63aaa84b060bf0e16" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Kiitos yhteydenotostasi! - Nords Oy</title>
