--- a/referenssi/mikura-sushi-oy.html
+++ b/referenssi/mikura-sushi-oy.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648c10166ce8487e75b73882" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<html data-wf-page="64f972652324ecc4fb28ade6" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>VSC Oy kotisivut - Nords Oy</title>
-  <meta content="VSC Oy kotisivut - Nords Oy" property="og:title">
-  <meta content="VSC Oy kotisivut - Nords Oy" property="twitter:title">
+  <title>Mikura Sushi Oy</title>
+  <meta content="Mikura Sushi Oy" property="og:title">
+  <meta content="Mikura Sushi Oy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/vsc-oy" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/mikura-sushi-oy" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -92,17 +92,17 @@
         </div>
       </div>
     </header>
-    <div class="hero inner _2">
+    <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-75b73882" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-fb28ade6" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display">VSC Oy</h1>
+              <h1 class="hero-display">Mikura Sushi Oy</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-75b73882" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-fb28ade6" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">04/2023</p>
+              <p class="paragraph-1 second">08/2023</p>
             </div>
           </div>
         </div>
@@ -116,18 +116,13 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/vsc.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/vsc-p-500.webp 500w, ../images/vsc-p-800.webp 800w, ../images/vsc-p-1080.webp 1080w, ../images/vsc.webp 1600w" alt="Yrityksen VSC Oy kotisivut auki tietokoneella ja matkapuhelimella." class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-mikura-sushi-p-500.webp 500w, ../images/mockup-mikura-sushi-p-800.webp 800w, ../images/mockup-mikura-sushi-p-1080.webp 1080w, ../images/mockup-mikura-sushi-p-1600.webp 1600w, ../images/mockup-mikura-sushi.webp 2000w" alt="Mikura Sushi" class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>Lakiasiaintoimisto VSC Oy Ltd on suomalainen lakitoimisto, joka tarjoaa monipuolisia palveluja kaikenlaisiin onglematilanteisiin. Kotisivuprojektimme keskeisenä tavoitteena oli luoda informatiivinen ja monikielinen verkkosivusto, joka auttaa kävijöitä löytämään tarvitsemansa tiedon helposti ja nopeasti.</p>
-            <p>Kotisivut toteutettiin suomeksi, englanniksi, turkiksi ja saksaksi, jotta VSC Oy:n laajamittainen ja kansainvälinen asiakaskunta pääsee helposti yrityksen tietoon käsiksi. </p>
-            <figure style="max-width:1600pxpx" class="w-richtext-align-fullwidth w-richtext-figure-type-image">
-              <div><img src="../images/vsc-mockup.webp" loading="lazy" alt="Yrityksen VSC Oy kotisivut auki kolmella matkapuhelimella eri kielillä."></div>
-            </figure>
-            <p>Sivut ovat suunniteltu käyttäjäystävällisesti ja olemme ylpeitä saavutetusta lopputuloksesta! Uskomme, että uudet kotisivut auttavat Lakiasiaintoimisto VSC Oy Ltd:tä saavuttamaan uusia asiakkaita ja kasvattamaan liiketoimintaansa.</p>
-            <p>‍</p>
-            <p>Voit tutustua sivuihin <a href="https://laki-vsc.fi/" target="_blank">tästä!</a>
+            <p>Mikura Sushi Oy on Helsingissä toimiva sushibuffet. Yhdessä asiakkaamme kanssa olemme luoneet upeat sivut, jotka tuovat selkeästi esille ravintolan tarjonnan, sijainnin ja yhteystiedot.</p>
+            <p>Projektin aikana keskityimme korkealaatuisen sisällön ja käyttökokemuksen luomiseen. Tavoitteena oli luoda helppokäyttöinen ja informatiivinen verkkosivusto.</p>
+            <p>Mikurasushi.fi on ammattimaisesti suunniteltu ja toteutettu kotisivuprojekti, joka on suunniteltu vastaamaan sushi ravintolan tarpeita. Olemme ylpeitä saavutetusta lopputuloksesta ja uskomme, että uudet kotisivut antavat yritykselle täysin uuden ilmeen. Voit käydä tutustumassa sivuihin klikkaamalla <a href="https://www.mikurasushi.fi/" target="_blank">tästä!</a>
             </p>
           </div>
         </div>
@@ -151,7 +146,7 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-75b73882" class="client-card">
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-fb28ade6" class="client-card">
                 <a href="../referenssi/ficia-oy" class="client-image w-inline-block"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
@@ -170,7 +165,7 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-75b73882" class="client-card">
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-fb28ade6" class="client-card">
                 <a href="../referenssi/vorrios-oy" class="client-image w-inline-block"><img src="../images/vorrios.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vorrios-p-500.webp 500w, ../images/vorrios-p-800.webp 800w, ../images/vorrios-p-1080.webp 1080w, ../images/vorrios.webp 1600w" alt="Yrityksen Vorrios Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
@@ -274,7 +269,7 @@
         </div>
       </div><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631767f79e39ffdfbe0a63c5_sammy-line-three-black-lines-1.svg" loading="lazy" alt="" class="airplane-image _1">
     </footer>
-    <a href="#" class="go-top w-inline-block">
+    <a href="#up" class="go-top w-inline-block">
       <div>Ylös</div>
     </a>
   </div>
