Update meta information

--- a/kiitos.html
+++ b/kiitos.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="648c1ca63aaa84b060bf0e16" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -72,16 +72,16 @@
       </div>
       <div class="grid-bottom-menu">
         <div class="social-wrapper">
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
             <div class="social-circle linkdin"></div>
           </a>
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
             <div class="social-circle instagram"></div>
           </a>
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
             <div class="social-circle twitter"></div>
           </a>
-          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+          <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
             <div class="social-circle dribble"></div>
           </a>
         </div>
