--- a/palvelut.html
+++ b/palvelut.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a292c037d99" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -79,16 +79,16 @@
         </div>
         <div class="grid-bottom-menu">
           <div class="social-wrapper">
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
               <div class="social-circle linkdin"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
               <div class="social-circle instagram"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
               <div class="social-circle dribble"></div>
             </a>
           </div>
@@ -122,7 +122,7 @@
         <div class="scroll-flex">
           <div class="lottie-animation" data-w-id="62d2a689-3014-4d03-e5fd-5a2792f9815d" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/624c4b185ef5f6159887042a/624d9b4cfb0938ebedc5ecf5_lf30_editor_6govlks1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
         </div>
-      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="62d2a689-3014-4d03-e5fd-5a2792f9815e" alt="Image of paper Airplane" class="airplane-image">
+      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="62d2a689-3014-4d03-e5fd-5a2792f9815e" alt="Kuva paperilentokoneesta" class="airplane-image">
     </section>
     <section id="scroll" class="section small-padding">
       <div class="container">
@@ -192,7 +192,7 @@
           </div>
           <div data-w-id="12f1ae9d-3103-8292-be2f-78c5e1743caf" style="opacity:0" class="features-content mobile-no-padding">
             <div>
-              <div class="icon-circle"><img src="images/languages.svg" loading="lazy" width="55" alt="Harmaa ikoni, jossa kaksi erikielistä kirjainta." class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/languages.svg" loading="lazy" width="55" alt="Monikielinen tuki" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Monikielinen tuki</h2>
@@ -217,7 +217,7 @@
         <div class="grid-3-columns">
           <div data-w-id="1644e13c-1f39-c47b-9117-5359831921d4" style="opacity:0" class="features-content mobile-no-padding top-20">
             <div>
-              <div class="icon-circle"><img src="images/star.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/star.svg" loading="lazy" width="55" alt="Tähti" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Brändin mukainen suunnittelu</h2>
@@ -228,7 +228,7 @@
           </div>
           <div data-w-id="659eebc1-8193-76f0-3e94-d5ec23d8febe" style="opacity:0" class="features-content mobile-no-padding">
             <div>
-              <div class="icon-circle"><img src="images/pen.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/pen.svg" loading="lazy" width="55" alt="Kynä" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Selkeys ja luettavuus</h2>
@@ -239,7 +239,7 @@
           </div>
           <div data-w-id="659eebc1-8193-76f0-3e94-d5ec23d8fec8" style="opacity:0" class="features-content mobile-no-padding">
             <div>
-              <div class="icon-circle"><img src="images/loop.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/loop.svg" loading="lazy" width="55" alt="Iteraatio" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Iteratiivinen suunnitteluprosessi</h2>
@@ -250,7 +250,7 @@
           </div>
           <div data-w-id="659eebc1-8193-76f0-3e94-d5ec23d8fed5" style="opacity:0" class="features-content mobile-no-padding">
             <div>
-              <div class="icon-circle"><img src="images/cloud.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/cloud.svg" loading="lazy" width="55" alt="Pilvi" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Monipuoliset tiedostomuodot</h2>
@@ -261,7 +261,7 @@
           </div>
           <div data-w-id="659eebc1-8193-76f0-3e94-d5ec23d8fedf" style="opacity:0" class="features-content mobile-no-padding">
             <div>
-              <div class="icon-circle"><img src="images/protection.svg" loading="lazy" width="55" alt="" class="feature-icon"></div>
+              <div class="icon-circle"><img src="images/protection.svg" loading="lazy" width="55" alt="Turvallisuus" class="feature-icon"></div>
             </div>
             <div>
               <h2 class="project-title">Täysi omistusoikeus</h2>
@@ -414,16 +414,16 @@
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c49aa-f17c497c" class="footer-contact-wrap">
               <div>
                 <div class="social-wrapper">
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
                     <div class="social-circle linkdin"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
                     <div class="social-circle instagram"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
                     <div class="social-circle dribble"></div>
                   </a>
                 </div>
