--- a/401.html
+++ b/401.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a96ac037ccb" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -41,7 +41,7 @@
 	})()</script>
         </div>
       </form>
-    </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="0a71508c-7c99-6e5b-def7-b59ff861c10f" alt="Image of paper Airplane" class="airplane-image">
+    </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="0a71508c-7c99-6e5b-def7-b59ff861c10f" alt="Kuva paperilentokoneesta" class="airplane-image">
   </div>
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=638cce601f96abee0a5facb7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/nordsoy.js" type="text/javascript"></script>
