--- a/ota-yhteytta.html
+++ b/ota-yhteytta.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a1e6f037d22" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Ota meihin yhteyttä tänään! - Nords Oy</title>
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" name="description">
-  <meta content="Ota meihin yhteyttä tänään! - Nords Oy" property="og:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="og:description">
+  <title>Ota yhteyttä - Nords Oy</title>
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" name="description">
+  <meta content="Ota yhteyttä - Nords Oy" property="og:title">
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="og:description">
   <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="og:image">
-  <meta content="Ota meihin yhteyttä tänään! - Nords Oy" property="twitter:title">
-  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Kerro meille tarpeistasi ja projekteistasi, ja autamme sinua mielellämme. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="twitter:description">
+  <meta content="Ota yhteyttä - Nords Oy" property="twitter:title">
+  <meta content="Voit ottaa meihin yhteyttä puhelimitse, sähköpostin tai yhteydenottolomakkeen avulla. Tartu tilaisuuteen ja aloita menestyksesi kanssamme!" property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -79,16 +79,16 @@
         </div>
         <div class="grid-bottom-menu">
           <div class="social-wrapper">
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
               <div class="social-circle linkdin"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
               <div class="social-circle instagram"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
               <div class="social-circle dribble"></div>
             </a>
           </div>
@@ -122,22 +122,22 @@
         <div class="scroll-flex">
           <div class="lottie-animation" data-w-id="2a18959f-0d4a-7671-4695-e1c236458ffc" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/624c4b185ef5f6159887042a/624d9b4cfb0938ebedc5ecf5_lf30_editor_6govlks1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
         </div>
-      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="2a18959f-0d4a-7671-4695-e1c236458ffd" alt="Image of paper Airplane" class="airplane-image">
+      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="2a18959f-0d4a-7671-4695-e1c236458ffd" alt="Kuva paperilentokoneesta" class="airplane-image">
     </section>
     <section id="scroll" class="section overflow">
       <div class="container">
         <div>
           <div data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1da" style="opacity:0" class="contact-grid">
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1db-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1db" style="opacity:0" class="contact-detail-wrap"><img src="images/phone.svg" loading="lazy" alt="" class="contact-icon">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1db-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1db" style="opacity:0" class="contact-detail-wrap"><img src="images/phone.svg" loading="lazy" alt="Puhelin" class="contact-icon">
               <h1 class="footer-title big">Puhelinnumero</h1>
               <p>Soita meille numeroon <a href="tel:+358449819623">044 981 9623</a> arkisin ma-pe (08:00 - 16:00).</p>
             </div>
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1e8-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1e8" style="opacity:0" class="contact-detail-wrap"><img src="images/mail.svg" loading="lazy" alt="" class="contact-icon">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1e8-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1e8" style="opacity:0" class="contact-detail-wrap"><img src="images/mail.svg" loading="lazy" alt="Sähköposti" class="contact-icon">
               <h1 class="footer-title big">Sähköpostiosoite</h1>
               <p>Jos haluat ottaa yhteyttä sähköpostitse, lähetä viesti osoitteeseen <a href="mailto:eeli@nords.fi">eeli@nords.fi.</a>
               </p>
             </div>
-            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="" class="contact-icon small">
+            <div id="w-node-_1601bf22-bd18-71f2-4e8a-0539627ff1f5-6f037d22" data-w-id="1601bf22-bd18-71f2-4e8a-0539627ff1f5" style="opacity:0" class="contact-detail-wrap"><img src="images/whatsapp.svg" loading="lazy" alt="WhatsApp" class="contact-icon small">
               <h1 class="footer-title big">WhatsApp</h1>
               <p>Voit myös lähettää meille viestiä WhatsApissa numeroon <a href="http://wa.me/358449819623" target="_blank">044 981 9623</a>!</p>
             </div>
@@ -216,16 +216,16 @@
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c49aa-f17c497c" class="footer-contact-wrap">
               <div>
                 <div class="social-wrapper">
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
                     <div class="social-circle linkdin"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
                     <div class="social-circle instagram"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
                     <div class="social-circle dribble"></div>
                   </a>
                 </div>
