--- a/tietosuojaseloste.html
+++ b/tietosuojaseloste.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html><!--  Last Published: Thu Sep 07 2023 07:10:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a6675037dba" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
   <title>Lue tietosuojaseloste - Nords Oy</title>
-  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi. Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." name="description">
+  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi." name="description">
   <meta content="Lue tietosuojaseloste - Nords Oy" property="og:title">
-  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi. Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." property="og:description">
+  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="og:image">
   <meta content="Lue tietosuojaseloste - Nords Oy" property="twitter:title">
-  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi. Lue lisää tietosuojaselosteestamme saadaksesi selkeän kuvan siitä, miten huolehdimme tietosuojastasi ja mitä oikeuksia sinulla on henkilötietojesi suhteen." property="twitter:description">
+  <meta content="Yksityisyytesi on meille tärkeä, ja pyrimme varmistamaan tietojesi turvallisen käsittelyn kaikissa tilanteissa. Täältä löydät kattavan tietopaketin siitä, miten käsittelemme ja suojaamme henkilötietojasi." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/638cce601f96abee0a5facb7/64997955529708c661ffbd10_opengraph.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
@@ -79,16 +79,16 @@
         </div>
         <div class="grid-bottom-menu">
           <div class="social-wrapper">
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a0268fe" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
               <div class="social-circle linkdin"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026901" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
               <div class="social-circle instagram"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a026907" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
               <div class="social-circle twitter"></div>
             </a>
-            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+            <a data-w-id="45a1046b-edc1-aa89-87ec-78ea1a02690a" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
               <div class="social-circle dribble"></div>
             </a>
           </div>
@@ -122,7 +122,7 @@
         <div class="scroll-flex">
           <div class="lottie-animation" data-w-id="7110104d-e976-53cb-8e90-b646dc0c9806" data-animation-type="lottie" data-src="https://uploads-ssl.webflow.com/624c4b185ef5f6159887042a/624d9b4cfb0938ebedc5ecf5_lf30_editor_6govlks1.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0"></div>
         </div>
-      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="7110104d-e976-53cb-8e90-b646dc0c9807" alt="Image of paper Airplane" class="airplane-image">
+      </div><img src="images/sammy-line-paper-plane.svg" loading="lazy" style="opacity:0" data-w-id="7110104d-e976-53cb-8e90-b646dc0c9807" alt="Kuva paperilentokoneesta" class="airplane-image">
     </section>
     <section class="section">
       <div class="container">
@@ -190,16 +190,16 @@
             <div id="w-node-_063a8163-44a6-b9f6-d883-e512f17c49aa-f17c497c" class="footer-contact-wrap">
               <div>
                 <div class="social-wrapper">
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49ad" href="https://www.linkedin.com/company/nords-oy/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44a84d797a6fb_linkedin.png" loading="lazy" width="21" alt="LinkedIn" class="animation-image _3">
                     <div class="social-circle linkdin"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="" class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b0" href="https://www.instagram.com/nords.fi/" target="_blank" class="social-icon w-inline-block"><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/6315f5173de44afa9f97a701_instagram.png" loading="lazy" width="20" alt="Instagram" class="animation-image _3">
                     <div class="social-circle instagram"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Ruutu, jonka sisällä on toista nappi." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b6" href="https://www.youtube.com/@nords." target="_blank" class="social-icon w-inline-block"><img src="images/youtube.svg" loading="lazy" width="20" alt="Youtube" class="animation-image _3">
                     <div class="social-circle twitter"></div>
                   </a>
-                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Kissa ympyrän sisällä." class="animation-image _3">
+                  <a data-w-id="063a8163-44a6-b9f6-d883-e512f17c49b9" href="https://github.com/nordsoy" target="_blank" class="social-icon w-inline-block"><img src="images/298822_github_mark_icon.svg" loading="lazy" width="20" alt="Github" class="animation-image _3">
                     <div class="social-circle dribble"></div>
                   </a>
                 </div>
