Update new references

--- a/referenssi/mikura-sushi-oy.html
+++ b/referenssi/mikura-sushi-oy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Oct 31 2023 12:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="64f972652324ecc4fb28ade6" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -116,7 +116,7 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-mikura-sushi-p-500.webp 500w, ../images/mockup-mikura-sushi-p-800.webp 800w, ../images/mockup-mikura-sushi-p-1080.webp 1080w, ../images/mockup-mikura-sushi-p-1600.webp 1600w, ../images/mockup-mikura-sushi.webp 2000w" alt="Mikura Sushi" class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-mikura-sushi-p-500.webp 500w, ../images/mockup-mikura-sushi-p-800.webp 800w, ../images/mockup-mikura-sushi-p-1080.webp 1080w, ../images/mockup-mikura-sushi-p-1600.webp 1600w, ../images/mockup-mikura-sushi.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Mikura Sushin verkkosivut." class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
