--- a/referenssi/valaistus-mk-oy.html
+++ b/referenssi/valaistus-mk-oy.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="648c1511ed3e283e4016f833" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
+<!DOCTYPE html><!--  Last Published: Tue Oct 31 2023 12:56:02 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="6540f4fd8e2467fe89325fb7" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
-  <title>Boostscape kotisivut - Nords Oy</title>
-  <meta content="Boostscape kotisivut - Nords Oy" property="og:title">
-  <meta content="Boostscape kotisivut - Nords Oy" property="twitter:title">
+  <title>Valaistus MK Oy</title>
+  <meta content="Valaistus MK Oy" property="og:title">
+  <meta content="Valaistus MK Oy" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="../css/normalize.css" rel="stylesheet" type="text/css">
   <link href="../css/components.css" rel="stylesheet" type="text/css">
@@ -16,7 +16,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
-  <link href="https://www.nords.fi/referenssi/boostscape" rel="canonical">
+  <link href="https://www.nords.fi/referenssi/valaistus-mk-oy" rel="canonical">
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-PSLMFQDWYR"></script>
   <script type="text/javascript">window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('set', 'developer_id.dZGVlNj', true);gtag('config', 'G-PSLMFQDWYR');</script>
   <meta name="robots" content="noindex">
@@ -92,17 +92,17 @@
         </div>
       </div>
     </header>
-    <div class="hero inner _2">
+    <div id="up" class="hero inner _2">
       <div class="container">
         <div class="hero-grid _2">
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-4016f833" class="part-2 center">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f56-89325fb7" class="part-2 center">
             <div class="hero-flex-center">
-              <h1 class="hero-display">Boostscape</h1>
+              <h1 class="hero-display">Valaistus MK Oy</h1>
             </div>
           </div>
-          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-4016f833" class="part-1 _2">
+          <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f5a-89325fb7" class="part-1 _2">
             <div class="hero-flex-center left _3">
-              <p class="paragraph-1 second">03/2023</p>
+              <p class="paragraph-1 second">09/2023</p>
             </div>
           </div>
         </div>
@@ -116,18 +116,13 @@
     <div class="section">
       <div class="container">
         <div class="blog-rich-text">
-          <div class="photo-animation-main"><img src="../images/boostscape.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/boostscape-p-500.webp 500w, ../images/boostscape-p-800.webp 800w, ../images/boostscape-p-1080.webp 1080w, ../images/boostscape.webp 1600w" alt="Yrityksen Boostscape kotisivut auki tietokoneella ja matkapuhelimella." class="photo">
+          <div class="photo-animation-main"><img src="../images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 92vw, (max-width: 1439px) 64vw, 840px" srcset="../images/mockup-valaistusmk.webp 500w, ../images/mockup-valaistusmk.webp 800w, ../images/mockup-valaistusmk.webp 1080w, ../images/mockup-valaistusmk.webp 1600w, ../images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="photo">
             <div class="absolute-background"></div>
           </div>
           <div class="margin-50px w-richtext">
-            <p>BoostScape on sosiaalisen median markkinointitoimisto, joka auttaa yrityksiä kasvattamaan näkyvyyttään. Kotisivuprojektimme tavoitteena oli luoda selkeä ja informatiivinen verkkosivusto, joka auttaa kävijöitä löytämään etsimänsä nopeasti ja helposti.</p>
-            <h3>Laatu ja käyttökokemus</h3>
-            <p>Sivustomme moderni muotoilu ja helppokäyttöinen navigointi auttavat kävijöitä saamaan selkeän käsityksen palveluistamme ja löytämään juuri heidän tarpeisiinsa sopivat ratkaisut</p>
-            <p>‍</p>
-            <blockquote>&quot;Olemme todella vaikuttuneita uusista kotisivuistamme ja siitä, miten onnistuitte toteuttamaan visiomme.&quot;</blockquote>
-            <p>‍</p>
-            <p>Olemme ylpeitä saavutetusta lopputuloksesta ja uskomme, että uudet kotisivumme auttavat BoostScapea kasvattamaan näkyvyyttään ja houkuttelemaan uusia asiakkaita.</p>
-            <p>Voit käydä tutustumassa sivuihin klikkaamalla <a href="https://www.boostscape.fi/" target="_blank">tästä!</a>
+            <p>Valaistus MK Oy on vakiinnuttanut asemansa luotettavana tukkumyyjänä, maahantuojana ja erikoistunut räätälöityjen valaistusratkaisujen toteuttamiseen arkkitehtien suunnitelmien pohjalta. </p>
+            <p>Loimme heille ammattimaiset nettisivut, jotka ovat auttaneet heitä laajentamaan näkyvyyttään ja houkuttelemaan uusia asiakkaita.</p>
+            <p>Pääset tutustumaan sivuihin <a href="https://www.valaistusmk.fi" target="_blank">tästä!</a>
             </p>
           </div>
         </div>
@@ -151,15 +146,15 @@
           </div>
           <div class="margin-40px">
             <div class="w-layout-grid client-grid">
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-4016f833" class="client-card">
-                <a href="../referenssi/ficia-oy" class="client-image w-inline-block"><img src="../images/ficia.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/ficia-p-500.webp 500w, ../images/ficia-p-800.webp 800w, ../images/ficia-p-1080.webp 1080w, ../images/ficia.webp 1600w" alt="Yrityksen Ficia Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-89325fb7" class="client-card">
+                <a href="../referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="../images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/mockup-helsinginkulta.webp 500w, ../images/mockup-helsinginkulta.webp 800w, ../images/mockup-helsinginkulta.webp 1080w, ../images/mockup-helsinginkulta.webp 1600w, ../images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">04/2023</a>
+                    <a href="#" class="category-tag">10/2023</a>
                   </div>
-                  <a href="../referenssi/ficia-oy" class="client-title">Ficia Oy</a>
+                  <a href="../referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/ficia-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/helsingin-kulta" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -170,15 +165,15 @@
                   </div>
                 </div>
               </div>
-              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f95-4016f833" class="client-card">
-                <a href="../referenssi/vorrios-oy" class="client-image w-inline-block"><img src="../images/vorrios.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/vorrios-p-500.webp 500w, ../images/vorrios-p-800.webp 800w, ../images/vorrios-p-1080.webp 1080w, ../images/vorrios.webp 1600w" alt="Yrityksen Vorrios Oy kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
+              <div id="w-node-bc32a490-4e94-16cf-5f56-cd348f1e5f85-89325fb7" class="client-card">
+                <a href="../referenssi/lannentilan-leipomo" class="client-image w-inline-block"><img src="../images/lannentilan-leipomo-mockup.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="../images/lannentilan-leipomo-mockup-p-500.webp 500w, ../images/lannentilan-leipomo-mockup-p-800.webp 800w, ../images/lannentilan-leipomo-mockup-p-1080.webp 1080w, ../images/lannentilan-leipomo-mockup-p-1600.webp 1600w, ../images/lannentilan-leipomo-mockup.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Lännentilan leipomon verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
-                    <a href="#" class="category-tag">08/2022</a>
+                    <a href="#" class="category-tag">08/2023</a>
                   </div>
-                  <a href="../referenssi/vorrios-oy" class="client-title">Vorrios Oy</a>
+                  <a href="../referenssi/lannentilan-leipomo" class="client-title">Lännentilan Leipomo Oy</a>
                   <div class="margin-20px">
-                    <a href="../referenssi/vorrios-oy" class="button-line w-inline-block">
+                    <a href="../referenssi/lannentilan-leipomo" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
@@ -274,7 +269,7 @@
         </div>
       </div><img src="https://uploads-ssl.webflow.com/6315d6de2357050021f26e96/631767f79e39ffdfbe0a63c5_sammy-line-three-black-lines-1.svg" loading="lazy" alt="" class="airplane-image _1">
     </footer>
-    <a href="#" class="go-top w-inline-block">
+    <a href="#up" class="go-top w-inline-block">
       <div>Ylös</div>
     </a>
   </div>
