--- a/referenssit.html
+++ b/referenssit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 23 2023 16:49:11 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Tue Oct 31 2023 12:56:02 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="63949a6eea7b3a8212037d6b" data-wf-site="638cce601f96abee0a5facb7" lang="fi">
 <head>
   <meta charset="utf-8">
@@ -103,7 +103,7 @@
         <div class="hero-grid _1">
           <div id="w-node-f77635b9-4633-76b1-ddf2-89b932592525-12037d6b" class="part-2">
             <div class="hero-flex-center">
-              <h1 class="hero-display _1 hidemobile">Referenssit</h1>
+              <h1 class="hero-display _1 hidemobile smaller">Referenssit</h1>
               <h1 class="hero-display _1 mobileshow references">Referens-sit</h1>
             </div>
           </div>
@@ -131,7 +131,45 @@
           <div class="margin-bottom-80px">
             <div class="w-layout-grid client-grid">
               <div id="w-node-a5804b4c-ec13-71fd-6d04-6df09bbd79f5-12037d6b" class="client-card">
-                <a href="referenssi/mikura-sushi-oy" class="client-image w-inline-block"><img src="images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-mikura-sushi-p-500.webp 500w, images/mockup-mikura-sushi-p-800.webp 800w, images/mockup-mikura-sushi-p-1080.webp 1080w, images/mockup-mikura-sushi-p-1600.webp 1600w, images/mockup-mikura-sushi.webp 2000w" alt="Mikura Sushi" class="client-image"></a>
+                <a href="referenssi/helsingin-kulta" class="client-image w-inline-block"><img src="images/mockup-helsinginkulta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-helsinginkulta.webp 500w, images/mockup-helsinginkulta.webp 800w, images/mockup-helsinginkulta.webp 1080w, images/mockup-helsinginkulta.webp 1600w, images/mockup-helsinginkulta.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Helsingin Kullan verkkosivut." class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="#" class="category-tag">10/2023</a>
+                  </div>
+                  <a href="referenssi/helsingin-kulta" class="client-title">Helsingin Kulta</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/helsingin-kulta" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-_08123857-49c1-ddb1-8dc1-9c58b1d0db3f-12037d6b" class="client-card">
+                <a href="referenssi/valaistus-mk-oy" class="client-image w-inline-block"><img src="images/mockup-valaistusmk.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-valaistusmk.webp 500w, images/mockup-valaistusmk.webp 800w, images/mockup-valaistusmk.webp 1080w, images/mockup-valaistusmk.webp 1600w, images/mockup-valaistusmk.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Valaistus MK:n verkkosivut." class="client-image"></a>
+                <div class="client-content add-shadow">
+                  <div class="category-felx">
+                    <a href="#" class="category-tag">09/2023</a>
+                  </div>
+                  <a href="referenssi/valaistus-mk-oy" class="client-title">Valaistus MK Oy</a>
+                  <div class="margin-20px">
+                    <a href="referenssi/valaistus-mk-oy" class="button-line w-inline-block">
+                      <div>
+                        <div>Lue lisää</div>
+                        <div class="button-line-button">
+                          <div class="button-absolute-line"></div>
+                        </div>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div id="w-node-b8cf8d00-cad7-6213-f7a7-b77dda4db355-12037d6b" class="client-card">
+                <a href="referenssi/mikura-sushi-oy" class="client-image w-inline-block"><img src="images/mockup-mikura-sushi.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/mockup-mikura-sushi-p-500.webp 500w, images/mockup-mikura-sushi-p-800.webp 800w, images/mockup-mikura-sushi-p-1080.webp 1080w, images/mockup-mikura-sushi-p-1600.webp 1600w, images/mockup-mikura-sushi.webp 2000w" alt="Kannettava tietokone ja älypuhelin,  joissa on auki Mikura Sushin verkkosivut." class="client-image"></a>
                 <div class="client-content add-shadow">
                   <div class="category-felx">
                     <a href="#" class="category-tag">08/2023</a>
@@ -215,44 +253,6 @@
                   <a href="referenssi/vorrios-oy" class="client-title">Vorrios Oy</a>
                   <div class="margin-20px">
                     <a href="referenssi/vorrios-oy" class="button-line w-inline-block">
-                      <div>
-                        <div>Lue lisää</div>
-                        <div class="button-line-button">
-                          <div class="button-absolute-line"></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div id="w-node-_068a8584-e916-d0a7-0a24-56d478f02f0d-12037d6b" class="client-card">
-                <a href="referenssi/exacta" class="client-image w-inline-block"><img src="images/exacta.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/exacta-p-500.webp 500w, images/exacta-p-800.webp 800w, images/exacta-p-1080.webp 1080w, images/exacta.webp 1600w" alt="Yrityksen Exacta kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
-                <div class="client-content add-shadow">
-                  <div class="category-felx">
-                    <a href="#" class="category-tag">03/2023</a>
-                  </div>
-                  <a href="referenssi/exacta" class="client-title">Exacta</a>
-                  <div class="margin-20px">
-                    <a href="referenssi/exacta" class="button-line w-inline-block">
-                      <div>
-                        <div>Lue lisää</div>
-                        <div class="button-line-button">
-                          <div class="button-absolute-line"></div>
-                        </div>
-                      </div>
-                    </a>
-                  </div>
-                </div>
-              </div>
-              <div id="w-node-_1a5a826d-3e7e-3dc2-0302-e85f38f78617-12037d6b" class="client-card">
-                <a href="referenssi/boostscape" class="client-image w-inline-block"><img src="images/boostscape.webp" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 92vw, (max-width: 991px) 44vw, (max-width: 1439px) 43vw, 560px" srcset="images/boostscape-p-500.webp 500w, images/boostscape-p-800.webp 800w, images/boostscape-p-1080.webp 1080w, images/boostscape.webp 1600w" alt="Yrityksen Boostscape kotisivut auki tietokoneella ja matkapuhelimella." class="client-image"></a>
-                <div class="client-content add-shadow">
-                  <div class="category-felx">
-                    <a href="#" class="category-tag">02/2023</a>
-                  </div>
-                  <a href="referenssi/boostscape" class="client-title">Boostscape</a>
-                  <div class="margin-20px">
-                    <a href="referenssi/boostscape" class="button-line w-inline-block">
                       <div>
                         <div>Lue lisää</div>
                         <div class="button-line-button">
